Exemple simple de CRUD avec Angular : gestion d'une liste de contacts

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "app-relation-client": {
+    "app-angular-contacts-list-example": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/app-relation-client",
+            "outputPath": "dist/app-angular-contacts-list-example",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "app-relation-client:build:production"
+              "buildTarget": "app-angular-contacts-list-example:build:production"
             },
             "development": {
-              "buildTarget": "app-relation-client:build:development"
+              "buildTarget": "app-angular-contacts-list-example:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -92,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
